<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ckA-IJ-7sE">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="Avenir.ttc">
            <string>Avenir-Light</string>
        </array>
        <array key="HiraginoKakuGothic.ttc">
            <string>HiraginoSans-W3</string>
        </array>
    </customFonts>
    <scenes>
        <!--Muda-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Mobile_Financial_App" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="vancouver" translatesAutoresizingMaskIntoConstraints="NO" id="cMv-tH-uCg">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                            </imageView>
                            <view opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YtE-yB-iw1">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                <subviews>
                                    <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sign-up" translatesAutoresizingMaskIntoConstraints="NO" id="Wkz-qe-wL3">
                                        <rect key="frame" x="135" y="128" width="105" height="100"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration">
                                            <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                        </accessibility>
                                    </imageView>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eIY-Xi-6Qv" customClass="LoginTextField" customModule="Mobile_Financial_App" customModuleProvider="target">
                                        <rect key="frame" x="43" y="350" width="289" height="48"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="light" secureTextEntry="YES"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="white-lock"/>
                                            <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                                <color key="value" red="0.82745098039999998" green="0.82745098039999998" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SvT-K9-MkD">
                                        <rect key="frame" x="60" y="487" width="253" height="44"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" red="0.69803921570000005" green="0.72156862749999995" blue="0.86666666670000003" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="displayP3"/>
                                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="21"/>
                                        <state key="normal" title="SIGN UP">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <segue destination="gC9-JN-pjf" kind="show" id="GsC-Zm-8s7"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfk-s6-PiB">
                                        <rect key="frame" x="60" y="426" width="253" height="44"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" red="0.71764705880000002" green="0.1529411765" blue="0.21176470589999999" alpha="0.94999999999999996" colorSpace="custom" customColorSpace="displayP3"/>
                                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="21"/>
                                        <state key="normal" title="LOG IN">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7wF-hw-ynY"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jnY-zE-PsA" customClass="LoginTextField" customModule="Mobile_Financial_App" customModuleProvider="target">
                                        <rect key="frame" x="43" y="281" width="289" height="48"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="light" enablesReturnKeyAutomatically="YES"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="icon-white"/>
                                            <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                                <color key="value" red="0.82745098039999998" green="0.82745098039999998" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                </subviews>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                    <navigationItem key="navigationItem" title="Muda" id="0dJ-ig-gXD"/>
                    <connections>
                        <outlet property="emailField" destination="jnY-zE-PsA" id="Clz-bi-UwC"/>
                        <outlet property="passwordField" destination="eIY-Xi-6Qv" id="RaN-gC-A4V"/>
                        <segue destination="cjA-dn-HCR" kind="show" identifier="loginToMenuSegue" id="fi3-pT-AjJ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="319.19999999999999" y="-224.4377811094453"/>
        </scene>
        <!--Menu-->
        <scene sceneID="tey-U8-OOM">
            <objects>
                <viewControllerPlaceholder storyboardName="Menu" id="cjA-dn-HCR" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Sy9-q9-Q3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="999" y="-235"/>
        </scene>
        <!--registration-->
        <scene sceneID="NZe-lp-hEL">
            <objects>
                <viewControllerPlaceholder storyboardName="registration" id="gC9-JN-pjf" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="TWZ-BZ-SEV" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="886" y="-94"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="fBa-ae-zqt">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ckA-IJ-7sE" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6eK-3W-qpt">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" name="Didot" family="Didot" pointSize="25"/>
                        </textAttributes>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="vtM-Nu-JZ1"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="WQN-xN-jcl" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-620" y="-224.4377811094453"/>
        </scene>
    </scenes>
    <resources>
        <image name="icon-white" width="32" height="32"/>
        <image name="sign-up" width="256" height="256"/>
        <image name="vancouver" width="787" height="1050"/>
        <image name="white-lock" width="32" height="32"/>
    </resources>
</document>
